--- a/src/app/components/complement-checkbox/complement-checkbox.component.html
+++ b/src/app/components/complement-checkbox/complement-checkbox.component.html
@@ -1,1 +1,1 @@
-<mat-checkbox [(ngModel)]="checked">Display Reverse Complement</mat-checkbox>
+<mat-checkbox #reverse (click)="changeReverse(reverse.checked)">Display Reverse Complement</mat-checkbox>
